--- a/js-a-css/tooltip-js/index.html
+++ b/js-a-css/tooltip-js/index.html
@@ -4,43 +4,24 @@
     <meta charset="UTF-8">
     <title>Tooltip</title>
     <style>
-        div[data-tooltip] {
-            display: inline;
-            font-weight: bold;
-            position: relative;
-        }
-
-        .tooltip {
-            display: block;
-            width: 200px;
-            border: 1px solid black;
-            position: absolute;
-            background-color: white;
-            padding: 3px;
-            top: 120%;
-            left: 0;
-        }
-    </style>
+     </style>
     <script>
-        window.onload = function()  {
-            let divs = document.querySelectorAll("div[data-tooltip]");
-            for (let i =0; i < divs.length; i++) {
-                let div = divs[i];
-                div.onmouseenter  = function() {
-                    div.innerHTML = div.innerHTML + '<div class="tooltip">' +div.getAttribute("data-tooltip") + '</div>';
-                 }
-                div.onmouseleave = function() {
-                    div.querySelector("div").remove();
-                 }
-            }
-        }
     </script>
 </head>
     <body>
         <div class="text">
-            Lorem ipsum dolor sit amet, <div data-tooltip="asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d">consectetur</div> adipiscing elit. Curabitur tempor leo at urna varius, eget scelerisque
-            arcu interdum. Aliquam et accumsan diam. Mauris <div  data-tooltip="asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d">tincidunt</div> faucibus fermentum. Vestibulum tempor dui quis erat
-            lobortis suscipit. Ut sit amet rutrum lacus, at <div  data-tooltip="asdasdas dasdasd asdasdas dasdasdas das dasdasdas da sd as da sd as d">blandit</div> nulla.
+            <div>
+                Lorem ipsum dolor sit amet,
+                <span>consectetur</span>
+                <span class="tooltip">Tooltip: asdasd asdasd asd a sd asd asdasda sda</span>
+                adipiscing elit. In  Curabitur tempor leo at urna varius, eget scelerisque.
+                <span>hendrerit</span>
+                <span class="tooltip">Tooltip: asdasd asdasd asd a sd asd asdasda sda</span>
+                adipiscing elit. ac ex eu aliquam. Etiam lacus orci, egestas et tempor at,
+                <span>rutrum</span>
+                <span class="tooltip">Tooltip: asdasd asdasd asd a sd asd asdasda sda</span>
+                adipiscing elit. vitae nulla. In  Curabitur tempor leo at urna varius, eget scelerisque.
+            </div>
         </div>
     </body>
 </html>
