--- a/css/dropdownmenu/index.html
+++ b/css/dropdownmenu/index.html
@@ -5,47 +5,51 @@
     <title>Title</title>
     <style>
         * {
-            padding: 0;
             margin: 0;
+            padding: 0;
         }
         #menu {
             background-color: gray;
-            padding: 4px;
+            padding: 2px;
         }
-        span {
-            white-space: nowrap;
-            display: block;
-            background-color: aquamarine;
-            padding: 2px 10px;
+        #menu > ul {
+            display: flex;
         }
 
-        /* formatovanie kostry menu */
-        #menu > ul > li {
-            display: inline-block;
-            position: relative;
-        }
-        li li {
-            position: relative;
-            display: block;
-        }
-        ul ul ul {
-            position: absolute;
-            top: 0;
-            left: 100%;
-        }
-        li:hover > ul {
-            display: block;
-        }
-        li ul {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
+        span {
             background-color: aqua;
-            margin: 0;
-            padding: 0;
+            display: block;
+            padding: 4px 10px;
+            margin: 2px;
+            white-space: nowrap;
+
         }
-        ul ul span:not(:only-child):after
+
+        li {
+            position: relative;
+            display: block;
+        }
+
+        ul ul {
+            position: absolute;
+            display: none;
+            border: 1px solid black;
+            background-color: #ebebeb;
+            margin-top: -1px;
+        }
+
+        /*Druha uroven*/
+        li:hover > ul {
+            display: flex;
+            flex-direction: column;
+        }
+        ul ul ul{
+            top: 0;
+            left: 100%
+        }
+
+        /*indikator*/
+        ul ul span:not(:only-child)::after
         {
             color: blue;
             content: "»";
@@ -54,114 +58,125 @@
 
         /* Zafarbenie vyberu */
         li:hover > span {
-            filter: brightness(60%);
+            color: red;
+            background-color: yellow;
         }
 
-        /* zafarbenie urovni*/
-        li span {
-            background-color: #e0e0e0;
+        /* Dodatocne */
+        span {
+            background-color: transparent
         }
-        li li span {
-            filter: brightness(85%);
+
+        #menu > ul > li > span {
+            background-color: #ebebeb;
         }
-        li li li span {
-            filter: brightness(75%);
+
+        #menu > ul > li:hover > span {
+            color: red;
+            background-color: yellow;
         }
-        li li li li span {
-            filter: brightness(65%);
+
+        ul ul {
+            background-color: #ebebeb;
+        }
+        ul ul ul {
+            background-color: #bdbdbd;
+        }
+        ul ul ul ul {
+            background-color: #949494;
         }
 
     </style>
 </head>
 <body>
-    <div id="menu">
-        <ul>
-            <li>
-                <span>Súbor</span>
-                <ul>
-                    <li>
-                        <span>Vytvoriť nový</span>
-                        <ul>
-                            <li><span>PDF</span></li>
-                            <li><span>PPT</span></li>
-                            <li><span>TXT</span></li>
-                            <li><span>HTML</span></li>
-                        </ul>
-                    </li>
-                    <li><span>Uložiť</span></li>
-                    <li>
-                        <span>Exportovať</span>
-                        <ul>
-                            <li>
-                                <span>Web</span>
-                                <ul>
-                                    <li><span>JSON</span></li>
-                                    <li><span>XML</span></li>
-                                    <li><span>SOAP</span></li>
-                                </ul>
-                            </li>
-                            <li><span>HDD</span></li>
-                            <li><span>Blog</span></li>
-                            <li><span>HTML</span></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <span>Nastavenie</span>
-                <ul>
-                    <li>
-                        <span>Zobrazenie</span>
-                        <ul>
-                            <li><span>Iba text</span></li>
-                            <li><span>Iba obrazky</span></li>
-                            <li><span>Text a ramce obrazkov</span></li>
-                            <li><span>Korektor</span></li>
-                            <li><span>Iba zmeny</span></li>
-                        </ul>
-                    </li>
-                    <li><span>Jazyk</span></li>
-                </ul>
-            </li>
-            <li>
-                <span>Akcie</span>
-                <ul>
-                    <li><span>Reset</span></li>
-                    <li>
-                        <span>Resetovat sluzbu</span>
+<div id="menu">
+    <ul>
+        <li>
+            <span>Súbor</span>
+            <ul>
+                <li>
+                    <span>Vytvoriť nový</span>
+                    <ul>
+                        <li><span>PDF</span></li>
+                        <li><span>PPT</span></li>
+                        <li><span>TXT</span></li>
+                        <li><span>HTML</span></li>
+                    </ul>
+                </li>
+                <li><span>Uložiť</span></li>
+                <li>
+                    <span>Exportovať</span>
+                    <ul>
+                        <li>
+                            <span>Web</span>
                             <ul>
-                                <li><span>DB</span></li>
-                                <li><span>Splitter</span></li>
-                                <li><span>Web</span></li>
-                                <li><span>Cron</span></li>
+                                <li><span>JSON</span></li>
+                                <li><span>XML</span></li>
+                                <li><span>SOAP</span></li>
                             </ul>
-                    </li>
-                    <li>
-                        <span>Log export</span>
-                        <ul>
-                            <li>
-                                <span>Chyby</span>
-                                <ul>
-                                    <li><span>Vsetky</span></li>
-                                    <li><span>Fatal</span></li>
-                                    <li><span>Varovania</span></li>
-                                </ul>
-                            </li>
-                            <li><span>Udalosti</span></li>
-                            <li><span>Vykonnost</span></li>
-                        </ul>
-                    </li>
-                    <li><span>Zaloha</span></li>
-                </ul>
-            </li>
-            <li>
-                <span>Help</span>
-                <ul>
-                    <li><span>O aplikacii</span></li>
-                    <li><span>Manual</span></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+                        </li>
+                        <li><span>HDD</span></li>
+                        <li><span>Blog</span></li>
+                        <li><span>HTML</span></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <span>Nastavenie</span>
+            <ul>
+                <li>
+                    <span>Zobrazenie</span>
+                    <ul>
+                        <li><span>Iba text</span></li>
+                        <li><span>Iba obrazky</span></li>
+                        <li><span>Text a ramce obrazkov</span></li>
+                        <li><span>Korektor</span></li>
+                        <li><span>Iba zmeny</span></li>
+                    </ul>
+                </li>
+                <li><span>Jazyk</span></li>
+            </ul>
+        </li>
+        <li>
+            <span>Akcie</span>
+            <ul>
+                <li><span>Reset</span></li>
+                <li>
+                    <span>Resetovat sluzbu</span>
+                    <ul>
+                        <li><span>DB</span></li>
+                        <li><span>Splitter</span></li>
+                        <li><span>Web</span></li>
+                        <li><span>Cron</span></li>
+                    </ul>
+                </li>
+                <li>
+                    <span>Log export</span>
+                    <ul>
+                        <li>
+                            <span>Chyby</span>
+                            <ul>
+                                <li><span>Vsetky</span></li>
+                                <li><span>Fatal</span></li>
+                                <li><span>Varovania</span></li>
+                            </ul>
+                        </li>
+                        <li><span>Udalosti</span></li>
+                        <li><span>Vykonnost</span></li>
+                    </ul>
+                </li>
+                <li><span>Zaloha</span></li>
+            </ul>
+        </li>
+        <li>
+            <span>Help</span>
+            <ul>
+                <li><span>O aplikacii</span></li>
+                <li><span>Manual</span></li>
+            </ul>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
