--- a/css/dropdownmenu/drop-up-menu.html
+++ b/css/dropdownmenu/drop-up-menu.html
@@ -11,6 +11,9 @@
         #menu {
             background-color: gray;
             padding: 2px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
         #menu > ul {
             display: flex;
@@ -30,13 +33,64 @@
         }
 
         ul ul {
-            display: block;
             position: absolute;
+            display: none;
+            border: 1px solid black;
+            background-color: #ebebeb;
+            margin: 0 0 -1px -1px;
         }
 
-        ul ul ul {
-            display: none;
+        /*Druha uroven*/
+        li:hover > ul {
+            display: flex;
+            flex-direction: column;
+            bottom: 100%;
         }
+
+        ul li:hover > ul ul {
+            bottom: 0px;
+            left: 100%;
+            margin-left: 0px;
+        }
+
+        /*indikator*/
+        ul ul span:not(:only-child)::after
+        {
+            color: blue;
+            content: "»";
+            padding: 3px 3px 3px 10px;
+        }
+
+        /* Zafarbenie vyberu */
+        li:hover > span {
+            color: red;
+            background-color: yellow;
+        }
+
+        /* Dodatocne */
+        span {
+            background-color: transparent
+        }
+
+        #menu > ul > li > span {
+            background-color: #ebebeb;
+        }
+
+        #menu > ul > li:hover > span {
+            color: red;
+            background-color: yellow;
+        }
+
+        ul ul {
+            background-color: #ebebeb;
+        }
+        ul ul ul {
+            background-color: #bdbdbd;
+        }
+        ul ul ul ul {
+            background-color: #949494;
+        }
+
     </style>
 </head>
 <body>
