--- a/js-a-css/analog-clock/index.html
+++ b/js-a-css/analog-clock/index.html
@@ -43,18 +43,9 @@
             ctx.arc(250, 250, 250, 0, DegToRad(360));
             ctx.stroke();
         }
-        function DrawSmallCircle(ctx){
+        function MakeTick(ctx){
+            ctx.clearRect(0, 0, 500, 500);
 
-            ctx.beginPath();
-            ctx.lineWidth = 1;
-            ctx.fillStyle = "black";
-            ctx.arc(250, 250, 10, 0, Math.PI * 2);
-            ctx.fill();
-            ctx.stroke();
-        }
-
-        function MakeTick(ctx, canvas){
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
             DrawCircle(ctx);
             // cifernik
             for(let i = 0 ; i < (360/6) ; i++) {
@@ -64,30 +55,21 @@
                     DrawLineMarker(ctx, i*6, 10)
                 }
             }
-
-            // rucicky
-
             let time = new Date();
 
             DrawWatchHand(ctx, time.getSeconds()*6, 210,1);
             DrawWatchHand(ctx, time.getMinutes()*6 + time.getSeconds()*0.1, 180,3);
             DrawWatchHand(ctx, time.getHours()*30 + time.getMinutes()*0.5, 150,5);
-
-            DrawSmallCircle(ctx);
         }
 
         window.onload = function(){
             let canvas = document.querySelector("canvas");
             let ctx = canvas.getContext("2d");
 
-
             setInterval( function() {
-                MakeTick(ctx, canvas);
+                MakeTick(ctx);
             }, 1000);
-            MakeTick(ctx, canvas);
-
-
-
+            MakeTick(ctx);
         }
 
 
