--- a/css/css-smajliky/index.html
+++ b/css/css-smajliky/index.html
@@ -8,22 +8,22 @@
     <style>
         .smajlik {
             --size: 50px;
+            display: inline-block;
+            position: relative;
             width: var(--size);
             height: var(--size);
-            border: black calc(var(--size) / 40) solid;
-            border-radius: 50%;
             background-color: #ffc83d;
-            position: relative;
-            display: inline-block;
-            margin: 5px;
+            border: black calc(var(--size)/25) solid;
+            border-radius: 50%;
+            z-index: 1;
         }
 
         .smajlik .oko {
+            display: block;
             background-color: black;
             width: 10%;
             height: 15%;
             border-radius: 50%;
-            display: block;
             position: absolute;
             left: 25%;
             top: 25%;
@@ -31,123 +31,152 @@
 
         .smajlik .oko:first-child {
             left: 65%;
-            top: 25%;
         }
 
         .smajlik .usta {
+            box-sizing: border-box;
             background-color: transparent;
-            width: 60%;
-            height: 60%;
-            border: calc(var(--size) / 25) solid transparent;
-            border-bottom: calc(var(--size) / 25) solid black;
+            width: 70%;
+            height: 70%;
+            border: calc(var(--size)/25) solid transparent;
+            border-bottom: calc(var(--size)/25) solid black;
             border-radius: 50%;
             display: block;
             position: absolute;
             top: 10%;
-            left: 50%;
-            transform: translateX(-50%);
-            transform-style: preserve-3d;
+            left: 15%;
+        }
+
+
+        .smajlik.smutny .usta {
+            border: calc(var(--size)/25) solid transparent;
+            border-top: calc(var(--size)/25) solid black;
+            top: 60%;
         }
 
         .smajlik.licka .usta::before, .smajlik.licka .usta::after {
-            display: block;
             position: absolute;
             content: "";
             background-color: #f7894a;
-            width: 33%;
-            height: 33%;
+            width: 30%;
+            height: 30%;
             border-radius: 50%;
+            bottom: 5%;
+            z-index: -1;
         }
 
         .smajlik.licka .usta::before {
-            transform: translate(-20%, 190%) translateZ(-1px);
+            left: -5%
         }
 
         .smajlik.licka .usta::after {
-            transform: translate(230%, 190%) translateZ(-1px);
+            right: -5%
         }
 
-        .smajlik.smutny .usta {
-            transform: translateX(-50%) rotate(180deg) translateY(-80%);
-        }
 
         .smajlik.vesely .usta {
             background: black;
             height: 20%;
-            width: 40%;
-            border-top: 0;
-            border-radius: initial;
-            border-bottom-left-radius: calc(var(--size) / 3);
-            border-bottom-right-radius: calc(var(--size) / 3);
-            transform: translateX(-50%) translateY(200%);
+            width: 50%;
+            top: 60%;
+            left: 25%;
+            border-radius: 0;
+            border-bottom-left-radius: 100% 200%;
+            border-bottom-right-radius: 100% 200%;
             overflow: hidden;
         }
 
         .smajlik.vesely .usta::before {
+            position: absolute;
             display: block;
             content: "";
             background: white;
             width: 100%;
-            height: 25%;
-            transform: translateY(75%);
+            height: 45%;
         }
 
         .smajlik.vesely .usta::after {
+            position: absolute;
             display: block;
             content: "";
             background: #f03a17;
             width: 50%;
             height: 50%;
             border-radius: 50%;
-            transform: translateY(100%) translateX(50%);
+            left: 25%;
+            bottom: -25%;
         }
 
-        .obrateny {
-            transform: rotateX(180deg);
+        /*.smajlik.s-100 {
+            transform: scale(2);
+            margin: 25px;
         }
 
-        .size-500 {
-            --size: 500px;
+        .smajlik.s-250 {
+            transform: scale(5);
+            margin: 100px;
+        }*/
+
+        .smajlik.s-100 {
+            --size: 100px;
         }
 
-        .size-250 {
+        .smajlik.s-250 {
             --size: 250px;
+        }
+
+        .smajlik.s-500 {
+            --size: 500px;
         }
     </style>
 </head>
 <body>
 
-    <div class="smajlik size-250">
+    <div class="smajlik vesely s-50">
+        <i class="oko"></i>
+        <i class="oko"></i>
+        <span class="usta"></span>
+    </div>
+
+    <div class="smajlik vesely s-100">
+        <i class="oko"></i>
+        <i class="oko"></i>
+        <span class="usta"></span>
+    </div>
+
+    <div class="smajlik vesely s-250">
+        <i class="oko"></i>
+        <i class="oko"></i>
+        <span class="usta"></span>
+    </div>
+
+    <div class="smajlik" style="--size: 25px">
         <i class="oko"></i>
         <i class="oko"></i>
         <span class="usta"></span>
     </div>
 
 
-    <div class="smajlik vesely size-250">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
-    </div>
-
-    <div class="smajlik size-250 licka">
+    <!--
+        <div class="smajlik s-250 licka">
         <i class="oko"></i>
         <i class="oko"></i>
         <span class="usta"></span>
     </div>
     
 
-    <div class="smajlik smutny size-250">
+    <div class="smajlik smutny s-250">
         <i class="oko"></i>
         <i class="oko"></i>
         <span class="usta"></span>
     </div>
 
-    <div class="smajlik obrateny size-250">
+    <div class="smajlik obrateny s-250">
         <i class="oko"></i>
         <i class="oko"></i>
         <span class="usta"></span>
     </div>
+    -->
 
 </body>
 </html>
