--- a/css/css-planety/index.html
+++ b/css/css-planety/index.html
@@ -5,48 +5,97 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style type="text/css">
     
-        .table {
-            position: relative;
-            width: 500px;
-            height: 300px;
-            background: darkgreen;
-            border: 5px solid black;
-        }
+    body {
+        background: white;
+    }
 
-        .ball {
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            background: red;
-            border: 1px solid black;
-            border-radius: 50%;
-            animation: x-axis 2s linear alternate infinite, y-axis 3.3s linear alternate infinite;
-        }
+    .sustava div {
+        width: var(--size);
+        height: var(--size);
+        position: absolute;
+        left: calc(50% - (var(--size) / 2));
+        top: calc(50% - (var(--size) / 2));
+    }
 
-        @keyframes x-axis {
-            from {
-                left: 0px;
-            }
-            to {
-                left: 470px; 
-            }
-        }
+    .slnko {
+        --size: 120px;
+        background-image: url("images_planety/sun.png");
+        background-size: cover;
+    }
 
-        @keyframes y-axis {
-            from {
-                top: 0px;
-            }
-            to {
-                top: 270px;
-            }
-        }
+    .zem {
+        --size: 80px;
+        background-image: url("images_planety/earth.png");
+        background-size: cover;
+        transform: translateX(300px);
+        animation: zemOrbit 5s linear infinite;
+    }
+
+    .mesiac {
+        --size: 40px;
+        background-image: url("images_planety/moon.png");
+        background-size: cover;
+        transform: translateX(80px);
+        animation: mesiacOrbit 2s linear infinite;
+    }
+
+    .saturn {
+        --size: 150px;
+        background-image: url("images_planety/saturn.png");
+        background-size: cover;
+        transform: translateX(450px);
+        animation: saturnOrbit 8s cubic-bezier(.75,.32,.54,.77) infinite;
+    }
+
+    @keyframes zemOrbit {
+        from { transform: rotate(0deg) translateX(300px) rotate(0deg); }
+        to   { transform: rotate(360deg) translateX(300px) rotate(-360deg); }
+    }
+
+    @keyframes mesiacOrbit {
+        from { transform: rotate(0deg) translateX(80px); }
+        to   { transform: rotate(-360deg) translateX(80px); }
+    }
+
+    @keyframes saturnOrbit {
+        0% { transform: rotate(0deg) translateX(450px) rotate(0deg); }
+        50% { transform: rotate(180deg) translateX(450px) rotate(-180deg); }
+        100%   { transform: rotate(360deg) translateX(450px) rotate(-360deg); }
+    }
+
+    /*.zem-orbit {
+        --size: 600px;
+        border: 1px dotted black;
+        border-radius: 50%;
+    }
+
+    .saturn-orbit {
+        --size: 900px;
+        border: 1px dotted black;
+        border-radius: 50%;
+    }
+
+    .mesiac-orbit {
+        --size: 160px;
+        border: 1px dotted black;
+        border-radius: 50%;
+    }*/
 
     </style>
 </head>
 <body>
 
-    <div class="table">
-        <div class="ball"></div>
+    <div class="sustava">
+
+        <div class="zem-orbit"></div>
+        <div class="saturn-orbit"></div>
+
+        <div class="slnko"></div>
+        <div class="zem">
+            <div class="mesiac-orbit"></div>
+            <div class="mesiac"></div>
+        </div>
+        <div class="saturn"></div>
     </div>
 
 </body>
