--- a/css/galeria/index.html
+++ b/css/galeria/index.html
@@ -4,83 +4,52 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style type="text/css">
-    
-        .lopta {
-            position: absolute;
-            left: 300px;
-            top: 0;
-            background: red;
-            border: 2px solid black;
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            transform: translateY(0);
-            animation-name: animacia-lopta;
-            animation-duration: 1s;
-            animation-iteration-count: infinite;
-            animation-direction: alternate;
-            animation-timing-function: linear;
-        }
-
-        @keyframes animacia-lopta {
-            0% {
-                width: 150px;
-                height: 150px;
-            }
-            80% {
-                width: 150px;
-                height: 150px;
-                transform: translateY(500px);
-            }
-            100% {
-                width: 200px;
-                height: 110px;
-                transform: translate(-20px, 560px);
-            }
-        }
-
-
-        .minca {
-            border: 3px solid darkblue;
-            border-radius: 50px;
-            background-color: royalblue;
-            width: 100px;
-            height: 100px;
-            margin: 20px;
-            animation: 0.5s linear;
-            transform: rotateY(0deg);
-            animation-fill-mode: forwards;
-        }
-
-        @keyframes coin-flip {
-            49% {
-                transform: rotateY(90deg);
-                background: royalblue;
-            }
-            50% {
-                transform: rotateY(90deg);
-                background: chartreuse;
-            }
-            100% {
-                background: chartreuse;
-                transform: rotateY(0deg);
-            }
-        }
-
-        .tlacidlo:active + .minca {
-            animation: coin-flip 0.5s ease-in-out alternate infinite;
+        .galeria {
+            display: flex;
+            flex-wrap: wrap;
+            padding: 5px 0 0 5px;
         }
 
         .fotka {
             position: relative;
-            width: 300px;
+            display: inline-block;
+            width: 100%;
             color: white;
-            background: black;
+            padding: 0 5px 0 0;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+
+        .fotka::before {
+            position: absolute;
+            top: 0;
+            left: 0;
+            content: "";
+            width: calc(100% - 5px);
+            height: calc(100% - 5px);
+            display: block;
+            background: rgba(0, 0, 0, 0);
+            transition: background-color 1s;
+        }
+
+        .fotka:hover:before {
+            background: rgba(0, 0, 0, 0.6);
+        }
+
+        @media (min-width: 650px) {
+            .fotka {
+                width: 50%;
+            }
+        }
+        
+        @media (min-width: 960px) {
+            .fotka {
+                width: 33.3%;
+            }
         }
 
         .fotka img {
-            width: 300px;
-            transition: opacity 0.5s;
+            width: 100%;
         }
 
         .fotka h3, .fotka p {
@@ -104,17 +73,13 @@
             display: block;
         }
 
-        .fotka:hover h3 {
-            animation: titulok-in 1s linear;
-        }
-
         .fotka:hover p {
             animation-delay: 0.5s;
             animation: popis-in 1s;
         }
 
         .fotka:hover img {
-            opacity: 0.2;
+            _opacity: 0.2;
         }
 
         @keyframes popis-in {
@@ -126,33 +91,47 @@
             }
         }
 
-        @keyframes titulok-in {
-            0% {
-                transform: translateY(300px) rotate(-90deg);
-            }
-            80% {
-                transform: translateY(0) rotate(-90deg);
-            }
-            100% {
-                transform: translateY(0) rotate(0);
-            }
-        }
-
     </style>
 </head>
 <body>
 
+    <div class="galeria">
+        <div class="fotka">
+            <img src="images_galeria/fotka.jpg" />
+            <h3>Včelín</h3>
+            <p>Popisok fotky na ktorej je včelín.</p>
+        </div>
 
-    <button class="tlacidlo">Klikni</button>
-    <div class="minca"></div>
+        <div class="fotka">
+            <img src="images_galeria/fotka2.jpg" />
+            <h3>Včela</h3>
+            <p>Popisok fotky na ktorej je včela.</p>
+        </div>
 
+        <div class="fotka">
+            <img src="images_galeria/fotka3.jpg" />
+            <h3>Včelín</h3>
+            <p>Popisok fotky na ktorej je včelín.</p>
+        </div>
 
-    <div class="lopta"></div>
+        <div class="fotka">
+            <img src="images_galeria/fotka4.jpg" />
+            <h3>Altánok</h3>
+            <p>Altánok za budovou FRI.</p>
+        </div>
 
-    <div class="fotka">
-        <img src="images_css-animacie/fotka.jpg" />
-        <h3>Včelín</h3>
-        <p>Popisok fotky na ktorej je včelín</p>
+        <div class="fotka">
+            <img src="images_galeria/fotka5.jpg" />
+            <h3>Faukulta riadenia a informatiky</h3>
+            <p>Budova FRI zo zadnej strany.</p>
+        </div>
+
+        <!--
+        <div class="fotka">
+            <img src="images_galeria/fotka6.jpg" />
+            <h3>Včela</h3>
+            <p>Ďalšia fotka včely</p>
+        </div>-->
     </div>
 
 </body>
