--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Jednoduchý chat</title>
+    <script type="module" src="main.js"></script>
 </head>
 <body>
 </body>
