uloha simple-chat: doplnenie

--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Jednoduchý chat</title>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </head>
 <body>
+    <div id="messages">
+    </div>
 </body>
 </html>
