uloha simple-chat: doplnenie

--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -8,5 +8,9 @@
 <body>
     <div id="messages">
     </div>
+    <div>
+        <input type="text" id="message">
+        <button id="send-button">Odoslať</button>
+    </div>
 </body>
 </html>
