--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <title>Jednoduchý chat</title>
     <script type="module" src="js/main.js"></script>
+    <style>
+        .loader {
+            border: 4px solid #f3f3f3; /* Light grey */
+            border-top: 4px solid #3498db; /* Blue */
+            border-radius: 50%;
+            width: 12px;
+            height: 12px;
+            animation: spin 2s linear infinite;
+            display: inline-block;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+    </style>
 </head>
 <body>
     <div id="messages">
