--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -47,7 +47,7 @@
     <div id="status-bar" class="">
         <div id="logout-form" class="hidden">
             <span>Prihlásený ako: </span><span id="user-name"></span>
-            <button>Odhlásiť</button>
+            <button  id="logout-button">Odhlásiť</button>
         </div>
         <div id="login-form">
             <input type="text" id="login"> <button id="login-button">Prihlásiť</button>
