uloha simple-chat: doplnenie

--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -37,6 +37,10 @@
             text-align: right;
         }
 
+        .user {
+            font-weight: bold;
+        }
+
         .hidden {
             display: none;
         }
