uloha simple-chat: doplnenie

--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <div id="status-bar" class="">
+    <div id="status-bar">
         <div id="logout-form" class="hidden">
             <span>Prihlásený ako: </span><span id="user-name"></span>
             <button  id="logout-button">Odhlásiť</button>
