--- a/css/css-smajliky/index.html
+++ b/css/css-smajliky/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Css tvary</title>
+    <title>CSS tvary</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <style>
