uloha simple-chat: doplnenie

--- a/php/simple-chat/index.html
+++ b/php/simple-chat/index.html
@@ -20,6 +20,10 @@
             100% { transform: rotate(360deg); }
         }
 
+        body {
+            padding-top: 20px;
+        }
+
         #status-bar {
             top: 0;
             left: 0;
@@ -47,7 +51,6 @@
         }
 
         #frame {
-            margin-top: 25px;
             display: flex;
             flex-direction: row;
             width: 100%;
