--- a/js-a-css/univerzal-loader/index.html
+++ b/js-a-css/univerzal-loader/index.html
@@ -42,7 +42,7 @@
             let requestCounter = 0;
 
             function updateRequestCounter() {
-                document.getElementById("requestCounter").innerText = "Ostáva " + requestCounter;
+                document.getElementById("requestCounter").innerText = "Zostáva " + requestCounter;
             }
 
             async function loaderFetch(...args) {
