--- a/css/css-planety/index.html
+++ b/css/css-planety/index.html
@@ -9,7 +9,7 @@
         background: white;
     }
 
-    .sustava div {
+    .system div {
         width: var(--size);
         height: var(--size);
         position: absolute;
@@ -19,38 +19,38 @@
         transform: translateX(var(--orbitRadius));
     }
 
-    .slnko {
+    .sun {
         --size: 120px;
         --orbitRadius: 0;
         background-image: url("images_planety/sun.png");
     }
 
-    .zem {
+    .earth {
         --size: 80px;
         --orbitRadius: 300px;
         background-image: url("images_planety/earth.png");
-        animation: kruhovaOrbita 5s linear infinite;
+        animation: circularOrbit 5s linear infinite;
     }
 
-    .mesiac {
+    .moon {
         --size: 40px;
         --orbitRadius: 80px;
         background-image: url("images_planety/moon.png");
-        animation: kruhovaOrbita 2s linear infinite;
+        animation: circularOrbit 2s linear infinite;
     }
 
     .saturn {
         --size: 150px;
         --orbitRadius: 450px;
         background-image: url("images_planety/saturn.png");
-        animation: kruhovaOrbita 8s cubic-bezier(.61,.11,.41,.91) infinite;
+        animation: circularOrbit 8s cubic-bezier(.61,.11,.41,.91) infinite;
     }
 
-    @keyframes kruhovaOrbita {
+    @keyframes circularOrbit {
         from { transform: rotate(0deg) translateX(var(--orbitRadius)) rotate(0deg); }
         to   { transform: rotate(360deg) translateX(var(--orbitRadius)) rotate(-360deg); }
     }
-    .sustava .orbit {
+    .system .orbit {
         --size: calc(var(--orbitRadius) * 2);
         border: 1px dotted black;
         border-radius: 50%;
@@ -63,15 +63,15 @@
 </head>
 <body>
 
-    <div class="sustava">
+    <div class="system">
 
-        <div class="zem orbit"></div>
+        <div class="earth orbit"></div>
         <div class="saturn orbit"></div>
 
-        <div class="slnko"></div>
-        <div class="zem">
-            <div class="mesiac orbit"></div>
-            <div class="mesiac"></div>
+        <div class="sun"></div>
+        <div class="earth">
+            <div class="moon orbit"></div>
+            <div class="moon"></div>
         </div>
         <div class="saturn"></div>
     </div>
