--- a/css/css-smajliky/index.html
+++ b/css/css-smajliky/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <style>
-        .smajlik {
+        .smiley {
             --size: 50px;
             display: inline-block;
             position: relative;
@@ -18,7 +18,7 @@
             z-index: 1;
         }
 
-        .smajlik .oko {
+        .smiley .eye {
             display: block;
             background-color: black;
             width: 10%;
@@ -29,11 +29,11 @@
             top: 25%;
         }
 
-        .smajlik .oko:first-child {
+        .smiley .eye:first-child {
             left: 65%;
         }
 
-        .smajlik .usta {
+        .smiley .mouth {
             box-sizing: border-box;
             background-color: transparent;
             width: 70%;
@@ -48,13 +48,13 @@
         }
 
 
-        .smajlik.smutny .usta {
+        .smiley.sad .mouth {
             border: calc(var(--size)/25) solid transparent;
             border-top: calc(var(--size)/25) solid black;
             top: 60%;
         }
 
-        .smajlik.licka .usta::before, .smajlik.licka .usta::after {
+        .smiley.cheeks .mouth::before, .smiley.cheeks .mouth::after {
             position: absolute;
             content: "";
             background-color: #f7894a;
@@ -65,16 +65,16 @@
             z-index: -1;
         }
 
-        .smajlik.licka .usta::before {
+        .smiley.cheeks .mouth::before {
             left: -5%
         }
 
-        .smajlik.licka .usta::after {
+        .smiley.cheeks .mouth::after {
             right: -5%
         }
 
 
-        .smajlik.vesely .usta {
+        .smiley.happy .mouth {
             background: black;
             height: 20%;
             width: 50%;
@@ -86,7 +86,7 @@
             overflow: hidden;
         }
 
-        .smajlik.vesely .usta::before {
+        .smiley.happy .mouth::before {
             position: absolute;
             display: block;
             content: "";
@@ -95,7 +95,7 @@
             height: 45%;
         }
 
-        .smajlik.vesely .usta::after {
+        .smiley.happy .mouth::after {
             position: absolute;
             display: block;
             content: "";
@@ -107,74 +107,74 @@
             bottom: -25%;
         }
 
-        /*.smajlik.s-100 {
+        /*.smiley.s-100 {
             transform: scale(2);
             margin: 25px;
         }
 
-        .smajlik.s-250 {
+        .smiley.s-250 {
             transform: scale(5);
             margin: 100px;
         }*/
 
-        .smajlik.s-100 {
+        .smiley.s-100 {
             --size: 100px;
         }
 
-        .smajlik.s-250 {
+        .smiley.s-250 {
             --size: 250px;
         }
 
-        .smajlik.s-500 {
+        .smiley.s-500 {
             --size: 500px;
         }
     </style>
 </head>
 <body>
 
-    <div class="smajlik vesely s-50">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
+    <div class="smiley happy s-50">
+        <i class="eye"></i>
+        <i class="eye"></i>
+        <span class="mouth"></span>
     </div>
 
-    <div class="smajlik vesely s-100">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
+    <div class="smiley happy s-100">
+        <i class="eye"></i>
+        <i class="eye"></i>
+        <span class="mouth"></span>
     </div>
 
-    <div class="smajlik vesely s-250">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
+    <div class="smiley happy s-250">
+        <i class="eye"></i>
+        <i class="eye"></i>
+        <span class="mouth"></span>
     </div>
 
-    <div class="smajlik" style="--size: 25px">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
+    <div class="smiley" style="--size: 25px">
+        <i class="eye"></i>
+        <i class="eye"></i>
+        <span class="mouth"></span>
     </div>
 
 
     <!--
-        <div class="smajlik s-250 licka">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
+        <div class="smiley s-250 cheeks">
+        <i class="eye"></i>
+        <i class="eye"></i>
+        <span class="mouth"></span>
     </div>
     
 
-    <div class="smajlik smutny s-250">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
+    <div class="smiley sad s-250">
+        <i class="eye"></i>
+        <i class="eye"></i>
+        <span class="mouth"></span>
     </div>
 
-    <div class="smajlik obrateny s-250">
-        <i class="oko"></i>
-        <i class="oko"></i>
-        <span class="usta"></span>
+    <div class="smiley obrateny s-250">
+        <i class="eye"></i>
+        <i class="eye"></i>
+        <span class="mouth"></span>
     </div>
     -->
 
