Preklad: CSS Position

--- a/css/position/index.html
+++ b/css/position/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/styl.css">
 </head>
 	<body>
-		<div class="slnko"></div>
+		<div class="sun"></div>
 		<div class="bird top left"></div>
 		<div class="bird top flip right"></div>
 		<div class="bird bottom left"></div>
