CSS selektory: zly closing elemeny v riešení

--- a/css/selektory/index.html
+++ b/css/selektory/index.html
@@ -179,7 +179,7 @@
             <td>1</td>
             <td><a href="https://google.sk">Https Link</a></td>
         </tr>
-    </div>
+    </table>
 
 </body>
 </html>
