Preklad: JS pexeso

--- a/js-a-css/pexeso/index.html
+++ b/js-a-css/pexeso/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pexeso</title>
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="skript.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <div id="skore">
-        <div id="hrac1">
+    <div id="score">
+        <div id="player1">
             Hráč 1:
-            <span id="hrac1_uhadnute">0</span>
+            <span id="player1_guessed">0</span>
         </div>
-        <div id="hrac2">
+        <div id="player2">
             Hráč 2:
-            <span id="hrac2_uhadnute">0</span>
+            <span id="player2_guessed">0</span>
         </div>
     </div>
-    <table id="plocha"></table>
+    <table id="board"></table>
     <button id="start">Rozdaj karty</button>
 </body>
 </html>
