--- a/css/gallery/index.html
+++ b/css/gallery/index.html
@@ -107,38 +107,38 @@
 <body>
     <div class="gallery">
         <div class="photo">
-            <img src="images_galeria/fotka.jpg" />
+            <img src="images_gallery/fotka.jpg" />
             <h3>Včelín</h3>
             <p>Popisok fotky na ktorej je včelín.</p>
         </div>
 
         <div class="photo">
-            <img src="images_galeria/fotka2.jpg" />
+            <img src="images_gallery/fotka2.jpg" />
             <h3>Včela</h3>
             <p>Popisok fotky na ktorej je včela.</p>
         </div>
 
         <div class="photo">
-            <img src="images_galeria/fotka3.jpg" />
+            <img src="images_gallery/fotka3.jpg" />
             <h3>Včelín</h3>
             <p>Popisok fotky na ktorej je včelín.</p>
         </div>
 
         <div class="photo">
-            <img src="images_galeria/fotka4.jpg" />
+            <img src="images_gallery/fotka4.jpg" />
             <h3>Altánok</h3>
             <p>Altánok za budovou FRI.</p>
         </div>
 
         <div class="photo">
-            <img src="images_galeria/fotka5.jpg" />
+            <img src="images_gallery/fotka5.jpg" />
             <h3>Faukulta riadenia a informatiky</h3>
             <p>Budova FRI zo zadnej strany.</p>
         </div>
 
         <!--
         <div class="photo">
-            <img src="images_galeria/fotka6.jpg" />
+            <img src="images_gallery/fotka6.jpg" />
             <h3>Včela</h3>
             <p>Ďalšia fotka včely</p>
         </div>-->
