--- a/css/solar-system/index.html
+++ b/css/solar-system/index.html
@@ -22,27 +22,27 @@
     .sun {
         --size: 120px;
         --orbitRadius: 0;
-        background-image: url("images_planety/sun.png");
+        background-image: url("images_solar-system/sun.png");
     }
 
     .earth {
         --size: 80px;
         --orbitRadius: 300px;
-        background-image: url("images_planety/earth.png");
+        background-image: url("images_solar-system/earth.png");
         animation: circularOrbit 5s linear infinite;
     }
 
     .moon {
         --size: 40px;
         --orbitRadius: 80px;
-        background-image: url("images_planety/moon.png");
+        background-image: url("images_solar-system/moon.png");
         animation: circularOrbit 2s linear infinite;
     }
 
     .saturn {
         --size: 150px;
         --orbitRadius: 450px;
-        background-image: url("images_planety/saturn.png");
+        background-image: url("images_solar-system/saturn.png");
         animation: circularOrbit 8s cubic-bezier(.61,.11,.41,.91) infinite;
     }
 
