--- a/js/data-table/index.html
+++ b/js/data-table/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="application/javascript" src="products-data.js"></script>
-    <script type="application/javascript" src="users-data.js"></script>
-    <script type="application/javascript" src="jstable.js"></script>
+    <script src="products-data.js"></script>
+    <script src="users-data.js"></script>
+    <script src="jstable.js"></script>
     <script>
         window.onload = function () {
             let table = new JsTable(usersData, document.getElementById("table01"));
