--- a/css/dropdownmenu/drop-down-menu.html
+++ b/css/dropdownmenu/drop-down-menu.html
@@ -35,7 +35,6 @@
             display: none;
             border: 1px solid black;
             background-color: #ebebeb;
-            margin-top: -1px;
         }
 
         /*Druha uroven*/
@@ -44,8 +43,8 @@
             flex-direction: column;
         }
 
-        ul ul ul{
-            top: 0;
+        ul ul ul {
+            top: -1px;
             left: 100%
         }
 
