--- a/css/emoticons/index.html
+++ b/css/emoticons/index.html
@@ -107,6 +107,10 @@
             bottom: -25%;
         }
 
+        .smiley.upside-down {
+            transform: rotate(180deg);
+        }
+
         /*.smiley.s-100 {
             transform: scale(2);
             margin: 25px;
@@ -171,7 +175,7 @@
         <span class="mouth"></span>
     </div>
 
-    <div class="smiley obrateny s-250">
+    <div class="smiley upside-down s-250">
         <i class="eye"></i>
         <i class="eye"></i>
         <span class="mouth"></span>
